--- a/index.html
+++ b/index.html
@@ -4,10 +4,133 @@
 
   <head>
     <title>Coehort Community</title>
+    <meta charset="utf-8">
     <link type="text/css" rel="stylesheet" href="styles/main.css" />
   </head>
 
-  <body>
+  <body class="body">
+
+    <div id="header">
+      <h1>Coehort Community</h1>
+    </div>
+
+    <!--<a href="https://www.twitch.tv/robbaz" class="link">
+      <div class="row">
+        <div class="streamer-avatar">
+          <img src="images/robbaz-profile-image-150x150.jpeg"/>
+        </div>
+        <div class="streamer-text">
+          <h2>Robbaz</h2>
+          <br>
+          Contain the channel name as a link, live status, viewer count, and game
+        </div>
+        <div class="live-status">
+          <svg height="150" width="150">
+            <circle cx="75" cy="75" r="20" fill="red"/>
+          </svg>
+        </div>
+      </a>
+
+      <a href="https://www.twitch.tv/maggotcheese" class="link">
+        <div class="row">
+          <div class="streamer-avatar">
+            <img src="images/maggotcheese-profile-image-150x150.png"/>
+          </div>
+          <div class="streamer-text">
+            <h2>Robbaz</h2>
+            <br>
+            Contain the channel name as a link, live status, viewer count, and game
+          </div>
+          <div class="live-status">
+            <svg height="150" width="150">
+              <circle cx="75" cy="75" r="20" fill="red"/>
+            </svg>
+          </div>
+        </a>
+
+        <a href="https://www.twitch.tv/hcjustin" class="link">
+          <div class="row">
+            <div class="streamer-avatar">
+              <img src="images/hcjustin-profile-image-150x150.png"/>
+            </div>
+            <div class="streamer-text">
+              <h2>Robbaz</h2>
+              <br>
+              Contain the channel name as a link, live status, viewer count, and game
+            </div>
+            <div class="live-status">
+              <svg height="150" width="150">
+                <circle cx="75" cy="75" r="20" fill="red"/>
+              </svg>
+            </div>
+          </a>-->
+
+      <div class="row">
+        <div class="streamer-avatar">
+          <img src="images/robbaz-profile-image-150x150.jpeg"/>
+        </div>
+        <div class="streamer-text">
+          <a href="https://www.twitch.tv/robbaz" class="link"><h2>Robbaz</h2></a>
+          <br>
+          Playing "Viking Attack" for 1,503 viewers!
+        </div>
+        <div class="live-status">
+          <svg height="150" width="150">
+            <circle cx="75" cy="75" r="20" fill="red"/>
+          </svg>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="streamer-avatar">
+          <img src="images/maggotcheese-profile-image-150x150.png"/>
+        </div>
+        <div class="streamer-text">
+          <a href="https://www.twitch.tv/maggotcheese" class="link"><h2>MaggotCheese</h2></a>
+          <br>
+          Playing "Warframe" for 764 viewers!
+        </div>
+        <div class="live-status">
+          <svg height="150" width="150" class="dot">
+            <circle cx="75" cy="75" r="20" fill="red"/>
+          </svg>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="streamer-avatar">
+          <img src="images/hcjustin-profile-image-150x150.png"/>
+        </div>
+        <div class="streamer-text">
+          <a href="https://www.twitch.tv/hcjustin" class="link"><h2>HCJustin</h2></a>
+          <br>
+          Playing "IRL" for 423 viewers!
+        </div>
+        <div class="live-status">
+          <svg height="150" width="150">
+            <circle cx="75" cy="75" r="20" fill="red"/>
+          </svg>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="streamer-avatar">
+          <img src="images/coestar-profile-image-150x150.png"/>
+        </div>
+        <div class="streamer-text">
+          <a href="https://www.twitch.tv/coestar" class="link"><h2>Coestar</h2></a>
+          <br>
+          Offline!
+        </div>
+        <div class="live-status">
+          <svg height="150" width="150">
+            <circle cx="75" cy="75" r="20" fill="grey"/>
+          </svg>
+        </div>
+      </div>
+
+
+    </div
 
   </body>
 
